docs/css/index.css
/* ... */
::view-transition-old(root) {
  animation-name: reveal-out;
}

::view-transition-new(root) {
  animation-name: reveal-in;
}

@property --rotation {
  syntax: "<angle>";
  inherits: false;
  initial-value: 0deg;
}

@property --scale {
  syntax: "<number>";
  inherits: false;
  initial-value: 1;
}

@keyframes reveal-in {
  from {
    --rotation: -90deg;
    animation-timing-function: ease-in-out;
  }

  15% {
    --scale: 0.8;
    --rotation: -90deg;
  }

  85% {
    --scale: 0.8;
    --rotation: 0deg;
    animation-timing-function: ease-in-out;
  }

  to {
    --rotation: 0deg;
  }
}

@keyframes reveal-out {
  from {
    --rotation: 0deg;
    animation-timing-function: ease-in-out;
  }

  15% {
    --scale: 0.8;
    --rotation: 0deg;
  }

  85% {
    --scale: 0.8;
    --rotation: 90deg;
    animation-timing-function: ease-in-out;
  }

  to {
    --rotation: 90deg;
  }
}

body {
  color-scheme: light;
  --base-color: #ffffff;
  --text-color: #000000;
  --text-span: #49879c;

  @container style(--theme: dark) {
    color-scheme: dark;
    --base-color: #000000;
    --text-color: #ffffff;
    --text-span: #49879c;
  }
}

html,
body {
  font-family: var(--pt-serif-italic);
  font-weight: var(--font-weight-1);
  font-style: var(--font-style-1);
  color: var(--text-color);
  background-color: var(--base-color);
}

body>* {
  /* Ensure all direct children of body are treated as containers */
  container-type: inline-size;
  margin-inline: auto;
  /* Allow them to be sized based on their content */
  /* Center content within the body */

}

.wrapper {
  margin-inline: auto;
  padding-inline: var(--space-2xs);
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title {
  word-spacing: var(--space-xs);
  padding-top: var(--space-xl);
  font-size: var(--step-0);
  text-align: center;
  margin-inline: auto;
}

.color-picker {
  position: absolute;
  top: var(--space-2xs);
  right: var(--space-2xl);
  view-transition-name: match-element;
}

.color-picker>fieldset {
  display: flex;
  flex-direction: row;
  padding: 0 var(--space-3xs);
  gap: var(--space-3xs);
  margin-inline: auto;
  border: 0;
  background: transparent;
  gap: var(--space-xs);
}

input[type="radio"] {
  opacity: 0;
  position: absolute;
  width: 1px;
  height: 1px;
  pointer-events: none;
}

label {
  position: relative;
  padding: var(--space-3xs);
  isolation: isolate;
  display: content;
  display: grid;
  place-items: center;

  &::before {
    position: absolute;
    background-color: transparent;
    border-radius: 100%;
    z-index: 1000;
    inset: 0px;
  }
}

label:has(+ input:checked) {
  color: var(--text-span);

  &::before {
    content: "";
  }
}

.curve-container {
  display: flex;
  flex-direction: column;
  gap: var(--space-2xl);
  padding-top: var(--space-xl);
  font-size: var(--step-2);
  color: var(--text-color);
}

.content,
.content-1 {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.content div,
.content-1 div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-darken;
}

.content div span,
.content-1 div span {
  margin-inline: auto;
  animation-duration: 3s;
  padding: 0;
  animation-timing-function: ease;
  animation-delay: .8s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-play-state: running;
  animation-fill-mode: both;
  animation-name: main-text-animation;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  text-shadow: 0 0 7px var(--text-color),
    0 0 10px var(--text-color),
    0 0 21px var(--text-color);
}

@keyframes show-hide {

  0%,
  100% {
    opacity: 0;
    transform: scale(.8)
  }

  20%,
  80% {
    opacity: 1;
    transform: scale(1)
  }
}

.down:before,
.up:before {
  width: 100%;
  height: var(--space-3xs);
  background: radial-gradient(ellipse at 100% 100%, var(--text-color), var(--text-color) 70%);
  content: "";
  position: absolute;
  border-radius: 100%;
  filter: blur(3px);
  left: 10%;
  top: 49%;
  /* Always-present base shadow: */
  box-shadow: 0 0 30px 0 var(--text-color), 0 0 0px 0 var(--text-color);
  /* Animate a second, larger shadow: */
  animation: shadow-glow var(--sp) ease-in-out 3s infinite;
  animation-timing-function: ease-in-out;
}

@keyframes shadow-glow {

  0%,
  100% {
    box-shadow: 0 0 30px 0 var(--text-color), 0 0 0px 0 var(--text-color);
  }

  45%,
  55% {
    box-shadow: 0 0 30px 0 var(--text-color), 0 0 100px 0 var(--text-color) / 0.5;
  }
}

.down:before {
  width: .3vmin;
  height: .5vmin;
  filter: blur(3px);
  left: calc(50% - .5vmin);
  top: 45%;
  box-shadow: 0 0 10px 0 var(--text-color), 0 0 0px 0 var(--text-color);
  animation: shadow var(--sp) ease-in-out 3s infinite;
}

@keyframes shadow {

  0%,
  10%,
  100%,
  90% {
    opacity: 0
  }

  45%,
  55% {
    opacity: .25;
    height: .25vmin
  }
}

.down span,
.up span {
  animation-duration: var(--sp);
  animation-timing-function: ease;
  animation-delay: 0s;
  animation-iteration-count: infinite
}

.up-2-8 {
  animation-name: go-up-2-8
}

.up-3-7 {
  animation-name: go-up-3-7
}

.up-4-6 {
  animation-name: go-up-4-6
}

.up-5 {
  animation-name: go-up-5
}

.down-2-8 {
  animation-name: go-down-2-8
}

.down-3-7 {
  animation-name: go-down-3-7
}

.down-4-6 {
  animation-name: go-down-4-6
}

.down-5 {
  animation-name: go-down-5
}

@keyframes go-up-2-8 {

  0%,
  10%,
  100%,
  90% {
    top: 0
  }

  40%,
  60% {
    top: -.6vmin
  }
}

@keyframes go-up-3-7 {

  0%,
  10%,
  100%,
  90% {
    top: 0
  }

  40%,
  60% {
    top: -1.2vmin
  }
}

@keyframes go-up-4-6 {

  0%,
  10%,
  100%,
  90% {
    top: 0
  }

  40%,
  60% {
    top: -1.8vmin
  }
}

@keyframes go-up-5 {

  0%,
  10%,
  100%,
  90% {
    top: 0
  }

  40%,
  60% {
    top: -2.4vmin
  }
}

@keyframes go-down-2-8 {

  0%,
  10%,
  100%,
  90% {
    top: 0
  }

  40%,
  60% {
    top: .6vmin
  }
}
/* ... */

